2003-05-21  Petter Reinholdtsen  <pere@hungry.com>

	* locale/programs/locale.c (main): Report an error if setlocale()
	fails [PR libc/2254].

2003-05-21  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/s390/system.c: New file.

2003-05-21  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep.h (LOADARGS_0,
	LOADARGS_1, LOADARGS_2, LOADARGS_3, LOADARGS_4, LOADARGS_5,
	LOADARGS_6): Don't error if syscall argument is a string literal.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/sysdep.h (LOADARGS_0,
	LOADARGS_1, LOADARGS_2, LOADARGS_3, LOADARGS_4, LOADARGS_5,
	LOADARGS_6): Likewise.

2003-05-21  Andreas Jaeger  <aj@suse.de>

	* sysdeps/generic/sysdep.h (cfi_offset, cfi_startproc,
	cfi_endproc, cfi_def_cfa, cfi_def_ccfa_register,
	cfi_def_cfa_offset, cfi_adjust_cfa_offset, cfi_offset): Define.

	* sysdeps/x86_64/sysdep.h (CALL_MCOUNT): Add cfi directives.
	(ENTRY): Likewise.
	(END): Likewise.

	* configure.in: Test for asm cfi directives.

	* config.h.in: Add HAVE_ASM_CFI_DIRECTIVES.

2003-05-17  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/x86_64/syscall.S: Revert last patch.

	* rt/tst-clock_nanosleep.c: Include <time.h> for clock_nanosleep.

2003-05-16  Ulrich Drepper  <drepper@redhat.com>

	* rt/Makefile (tests): Add tst-clock_nanosleep.
	* rt/tst-clock_nanosleep.c: New file.
	* posix/Makefile (tests): Add tst-nanosleep.
	* posix/tst-nanosleep.c: New file.

	* sysdeps/unix/clock_nanosleep.c (CPUCLOCK_P): Fix definition.

	* include/features.h (__USE_XOPEN2K): Define also for
	_POSIX_C_SOURCE>=200112L.

	* sysdeps/unix/sysv/linux/sigwaitinfo.c (do_sigwaitinfo): Fold
	SI_TKILL code into SI_USER.
	* sysdeps/unix/sysv/linux/sigtimedwait.c (do_sigtimedwait): Likewise.

	* sysdeps/posix/sigpause.c (do_sigpause): Use sigdelset after all.

2003-05-15  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/powerpc32/dl-machine.c (_dl_reloc_overflow):
	Remove sym argument, always use refsym.