@@ -1,3 +1,9 @@
+2003-05-21  Ulrich Drepper  <drepper@redhat.com>
+
+	* csu/elf-init.c: Mark __preinit_array_start, __preinit_array_end,
+	__init_array_start, __init_array_end, __fini_array_start, and
+	__fini_array_end as hidden.
+
 2003-05-21  Petter Reinholdtsen  <pere@hungry.com>
 
 	* locale/programs/locale.c (main): Report an error if setlocale()
